Ctrl+Shift+Click on a node does't work if the node is already selected (Link Viewer, Node Wrangler) #70581

Closed
opened 2019-10-06 07:03:19 +02:00 by Tyler · 23 comments

System Information
Operating system: Arch Linux
Graphics card: gtx 1060

Blender Version
Broken: 2.81, 4707f1982ddb

Worked: (optional)

Short description of error
Node wrangler (emission viewer): Ctrl+Shift+Click on a node is supposed to cycle thru all of its outputs to the emission viewer node. But it doesn't work with the latest alpha.
Bultin: Ctrl+Shift+Click on a node should link to a viewer, this is only working if the node is not selected already

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: Arch Linux Graphics card: gtx 1060 **Blender Version** Broken: 2.81, 4707f1982ddb Worked: (optional) **Short description of error** Node wrangler (emission viewer): Ctrl+Shift+Click on a node is supposed to cycle thru all of its outputs to the emission viewer node. But it doesn't work with the latest alpha. Bultin: Ctrl+Shift+Click on a node should link to a viewer, this is only working if the node is not selected already **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @Tyler-Foo

Added subscriber: @Tyler-Foo

blender/blender#70758 was marked as duplicate of this issue

blender/blender#70758 was marked as duplicate of this issue

blender/blender#70748 was marked as duplicate of this issue

blender/blender#70748 was marked as duplicate of this issue
Tyler changed title from Node wrangler (emission viewer), Ctrl+Shift+Click on a node does't cycle thru all of it to Node wrangler (emission viewer), Ctrl+Shift+Click on a node does't cycle thru all of its outputs 2019-10-06 07:06:34 +02:00

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

Yes, found that too. It doesn't cycle through the outputs because ctrl_shift_click doesn't work on selected node at all. If you take an unconnected node, select it and ctrl_shift_click it - nothing happens.

Yes, found that too. It doesn't cycle through the outputs because ctrl_shift_click doesn't work on selected node at all. If you take an unconnected node, select it and ctrl_shift_click it - nothing happens.

Added subscriber: @kosblend

Added subscriber: @kosblend

Added subscriber: @VladimirKunyansky

Added subscriber: @VladimirKunyansky

Can confirm on 40a55be82cf5

Doesn't cycle through, doesn't connect active nodes.
But hotkey 'O' is working with active nodes.

Can confirm on **40a55be82cf5** Doesn't cycle through, doesn't connect active nodes. But hotkey 'O' is working with active nodes.

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Julian Eisel was assigned by Philipp Oeser 2019-10-10 14:56:20 +02:00
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Caused by blender/blender@5f51e78172 / blender/blender@be2cd4bb53

Note this does not only break the Addon, but e.g. the native Link Viewer etc.

CC @brecht

Marking as High prio since it is a regression.

Caused by blender/blender@5f51e78172 / blender/blender@be2cd4bb53 Note this does not only break the Addon, but e.g. the native `Link Viewer` etc. CC @brecht Marking as High prio since it is a regression.
Philipp Oeser changed title from Node wrangler (emission viewer), Ctrl+Shift+Click on a node does't cycle thru all of its outputs to Ctrl+Shift+Click on a node does't work if thenode is already selected (Link Viewer, Node Wrangler) 2019-10-10 14:59:17 +02:00
Philipp Oeser changed title from Ctrl+Shift+Click on a node does't work if thenode is already selected (Link Viewer, Node Wrangler) to Ctrl+Shift+Click on a node does't work if the node is already selected (Link Viewer, Node Wrangler) 2019-10-10 14:59:27 +02:00

Added subscriber: @BartekMoniewski

Added subscriber: @BartekMoniewski
Member

Added subscriber: @EAW

Added subscriber: @EAW

Added subscriber: @B_Engstler

Added subscriber: @B_Engstler

Added subscriber: @leiserfg

Added subscriber: @leiserfg
Member

Added subscribers: @GabrielMoro, @MarcinTwarowski

Added subscribers: @GabrielMoro, @MarcinTwarowski
Member

Added subscriber: @jlw3d

Added subscriber: @jlw3d

This issue was referenced by blender/blender@80fe0ac7ff

This issue was referenced by blender/blender@80fe0ac7ff8cf44cc7f3706ea47270a1e794e1ff
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @peterling

Added subscriber: @peterling

Added subscriber: @ArtyomSobolev

Added subscriber: @ArtyomSobolev
Sign in to join this conversation.
No Milestone
No project
No Assignees
14 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#70581
No description provided.