source/blender/windowmanager/intern/wm_operator_props.c
@@ -399,7 +399,7 @@ void WM_operator_properties_select_operation_simple(wmOperatorType *ot)
 void WM_operator_properties_generic_select(wmOperatorType *ot)
 {
   PropertyRNA *prop = RNA_def_boolean(
-      ot->srna, "wait_to_deselect_others", true, "Wait to Deselect Others", "");
+      ot->srna, "wait_to_deselect_others", false, "Wait to Deselect Others", "");
   RNA_def_property_flag(prop, PROP_HIDDEN | PROP_SKIP_SAVE);
 
   RNA_def_int(ot->srna, "mouse_x", 0, INT_MIN, INT_MAX, "Mouse X", "", INT_MIN, INT_MAX);
